styles/markdown-styles.module.css
.markdown {
  @apply font-sans text-sm;
}

.markdown p,
.markdown ul,
.markdown ol,
.markdown blockquote {
  @apply pb-4 text-sm text-neutral-500 dark:text-neutral-300;
}

.markdown h2 {
  @apply pt-4 pb-1 text-2xl font-bold leading-snug tracking-wide text-neutral-800 dark:text-neutral-200;
}

.markdown h3 {
  @apply pt-2 pb-1 text-xl font-bold leading-snug;
}

.markdown p a {
  @apply font-mono font-bold text-black underline decoration-teal-500 decoration-2 underline-offset-4 transition ease-in-out hover:text-teal-500 dark:text-white;
}

.markdown ul li {
  @apply mb-2 list-inside list-disc rounded p-2;
}

.markdown ol li {
  @apply mb-2 list-inside list-decimal rounded p-2;
}

